k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: backend
